--- a/app/src/main/res/layout/splashactivity.xml
+++ b/app/src/main/res/layout/splashactivity.xml
@@ -2,15 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/black"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/gifKMP"
+        android:id="@+id/imageView"
+        android:src="@drawable/quizpng"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
