--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -31,6 +31,22 @@
                 android:backgroundTint="#2271b3"
                 android:text="Iniciar examen" />
 
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="2dp"
+                android:onClick="buttonClick"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:drawableLeft="@drawable/subtopic"
+                android:textSize="18dp"
+                android:backgroundTint="#2271b3"
+                android:text="REQUISITOS" />
+
 
 
 
