--- a/app/src/main/res/layout/finalscreen.xml
+++ b/app/src/main/res/layout/finalscreen.xml
@@ -4,7 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="#FFFFFF"
+    tools:context=".ui.dashboard.DashboardFragment"
     android:layout_height="match_parent">
+
+
+
 
     <TextView
         android:id="@+id/textView"
