--- a/app/src/main/res/layout/requisitos.xml
+++ b/app/src/main/res/layout/requisitos.xml
@@ -7,8 +7,6 @@
     tools:context=".ui.dashboard.DashboardFragment"
     >
 
-
-
     <LinearLayout
         android:id="@+id/hidden_layout"
         android:layout_width="match_parent"
@@ -26,6 +24,7 @@
     </LinearLayout>
 
 
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -37,6 +36,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/requisitos"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                />
 
     <Button
         android:id="@+id/btnVolver"
