--- a/app/src/main/res/layout/splashactivity.xml
+++ b/app/src/main/res/layout/splashactivity.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="#1D3557"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/imageView"
-        android:src="@drawable/quizpng"
+        android:src="@drawable/guivi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
