--- a/app/src/main/res/layout/requisitos.xml
+++ b/app/src/main/res/layout/requisitos.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
+    android:background="#A8DADC"
     tools:context=".ui.dashboard.DashboardFragment"
     >
 
@@ -23,8 +23,6 @@
 
     </LinearLayout>
 
-
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -36,7 +34,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
             <TextView
                 android:layout_width="match_parent"
@@ -61,7 +58,6 @@
         android:onClick="buttonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
