--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,7 +16,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button1"
+                android:id="@+id/btnSenales"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginStart="5dp"
@@ -29,7 +29,39 @@
                 android:drawableLeft="@drawable/subtopic"
                 android:textSize="18dp"
                 android:backgroundTint="#2271b3"
-                android:text="Iniciar examen" />
+                android:text="Señales de transito" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="2dp"
+                android:onClick="buttonClick"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:drawableLeft="@drawable/subtopic"
+                android:textSize="18dp"
+                android:backgroundTint="#2271b3"
+                android:text="Examen corto" />
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="2dp"
+                android:onClick="buttonClick"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:drawableLeft="@drawable/subtopic"
+                android:textSize="18dp"
+                android:backgroundTint="#2271b3"
+                android:text="Examen completo" />
 
             <Button
                 android:id="@+id/button2"
@@ -45,9 +77,39 @@
                 android:drawableLeft="@drawable/subtopic"
                 android:textSize="18dp"
                 android:backgroundTint="#2271b3"
-                android:text="REQUISITOS" />
+                android:text="Requisitos para tramitar las licencia de conducir" />
 
+<!--            <Button-->
+<!--                android:id="@+id/button1"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="100dp"-->
+<!--                android:layout_marginStart="5dp"-->
+<!--                android:layout_marginTop="2dp"-->
+<!--                android:layout_marginEnd="5dp"-->
+<!--                android:layout_marginBottom="2dp"-->
+<!--                android:onClick="buttonClick"-->
+<!--                android:textColor="@color/white"-->
+<!--                android:textStyle="bold"-->
+<!--                android:drawableLeft="@drawable/subtopic"-->
+<!--                android:textSize="18dp"-->
+<!--                android:backgroundTint="#2271b3"-->
+<!--                android:text="Iniciar examen" />-->
 
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="2dp"
+                android:onClick="buttonClick"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:drawableLeft="@drawable/subtopic"
+                android:textSize="18dp"
+                android:backgroundTint="#2271b3"
+                android:text="Precios Licencia" />
 
 
         </LinearLayout>
