--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -48,7 +48,7 @@
                 android:text="Examen corto" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/button1"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginStart="5dp"
@@ -96,7 +96,7 @@
 <!--                android:text="Iniciar examen" />-->
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btnPrecios"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginStart="5dp"
