--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -14,49 +14,43 @@ android:padding="16dp">
         android:src="@drawable/txt5" />
 
 
-    <ImageButton
+    <Button
         android:id="@+id/selectTimeButton"
         android:layout_width="match_parent"
-        android:layout_height="147dp"
-        android:layout_marginTop="2dp"
-        android:adjustViewBounds="true"
-        android:background="@android:color/transparent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:layout_marginStart="8dp"
+        android:drawableLeft="@drawable/notification"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#2271b3"
+        android:textStyle="bold"
+        android:textSize="20dp"
         android:scaleType="centerCrop"
         android:src="@mipmap/noti5_foreground"
         android:text="Activar notificaciones"
-        android:textSize="16sp" />
-    <TextView
+        />
+
+
+
+    <Button
+        android:id="@+id/disableNotificationsButton"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ACTIVAR"
-        android:textColor="@color/black"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-
-    <ImageButton
-        android:id="@+id/disableNotificationsButton"
-        android:layout_width="match_parent"
-        android:layout_height="184dp"
-        android:layout_marginTop="16dp"
-        android:adjustViewBounds="true"
-        android:background="@android:color/transparent"
+        android:textColor="@color/white"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#2271b3"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:layout_marginTop="30dp"
+        android:drawableLeft="@drawable/silent"
         android:scaleType="centerCrop"
         android:src="@mipmap/noti4_foreground"
         android:text="Desactivar"
+        />
 
-        android:textSize="16sp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:text="DESACTIVAR"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:textAlignment="center"
-        android:textStyle="bold" />
 
     <TimePicker
         android:id="@+id/timePicker"
