--- a/app/src/main/res/layout/finalscreen.xml
+++ b/app/src/main/res/layout/finalscreen.xml
@@ -31,10 +31,12 @@
 
     <Button
         android:id="@+id/buttonSalir"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="128dp"
         android:text="Finalizar"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:backgroundTint="#e63946"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
