--- a/app/src/main/res/layout/subtemas3.xml
+++ b/app/src/main/res/layout/subtemas3.xml
@@ -50,13 +50,21 @@
             android:orientation="vertical">
 
 
-            <ImageView
-                android:layout_width="300dp"
-                android:layout_height="90dp"
-                android:src="@drawable/subt4"
-                android:scaleType="fitCenter"
-                android:layout_gravity="center"
-                />
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="0dp"
+                android:backgroundTint="#2a9d8f"
+
+                android:onClick="buttonClick"
+                android:text=""
+                android:textColor="#e9c46a"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/button1"
